[package]
name = "dadosod"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ppc750cl = { git='https://github.com/InusualZ/ppc750cl', branch="dol-improv", package='ppc750cl' }
dol = { git='https://github.com/InusualZ/ppc750cl', branch="dol-improv", package='dol' }

argh = "0.1"